# ChangeLog for dev-python/statsmodels
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/statsmodels/ChangeLog,v 1.2 2013/08/21 16:29:03 bicatali Exp $

  21 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> statsmodels-0.5.0.ebuild:
  Fix sandbox violation for python-3.3 (bug #481822)

*statsmodels-0.5.0 (20 Aug 2013)

  20 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +statsmodels-0.5.0.ebuild:
  Version bump. Move sci-libs/scikits_statsmodels to dev-python/statsmodels