@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST statsmodels-0.5.0.tar.gz 5519668 SHA256 65398518bdd414c712362738e61d34ee5ec07b4c084bba17c65af5f20ae109d0 SHA512 24526200f212c1ad4492b84aad65967254d89aecee4c9f5d76ed499aa9b8c7fe619ca7301810ff5e7aec407f2f01b139c9f9c152a4597fe21736d04b24f6dd0a WHIRLPOOL c2719d25873ea949da30c63895c4536c559c0f45923eb885a3f7f664f3b82783d9945b346032513c4e0f1df9b82f9657956885e05d94505207a4c9ddb10a489e
-EBUILD statsmodels-0.5.0.ebuild 1760 SHA256 837d01694f94d262623a23a8320e58911ad0335a8b43172a7e4d3f9b818041fa SHA512 3a3985919c110cdcb51d275a6eb2f65586cbdcba85db57b9054caecec4ac89459652b87819f911e8f19b4268d0a8715d844d21628704857b019102c49e05b341 WHIRLPOOL 7a0c49decccd2ed18dddbf1615a40b91c8241f7472c16d0d6de2233794fb1f0bbd55d4c9b1d16c19d0265e5944399b4a5bdc2bc7a349fb164d31edcb9f0c0f62
-MISC ChangeLog 563 SHA256 3ac6006d5eb83e811241e8c8e348a9febc01d82255f51f6701407caf143996f1 SHA512 cfeaf486b5f28359c2959f866eafe967abb1de5117128e69408c7b56b48a0facd5996bfb3fc60ca7d118d28706611b1b27a065cd649eab3ddc293cd65fbf3feb WHIRLPOOL 1a6e2303a7af9e753ee98aa8dd3b793222a21f93112c545cc3ae6ffc8ee8e861da400774fc603f3566d0682c607f4f4dad58572f6bfa5a954c93568fdef59ec2
+EBUILD statsmodels-0.5.0.ebuild 1747 SHA256 0437be5aa4dfad4f99167458eba499763e0f7e2f7c572a82c172266f2a2f4c00 SHA512 002c81b30116bd4233cab672588a8a3d10732b1b021b720aa1a10138cde57bd0668fecf8403b8c083595c244ae01a0803d7709c4298a7b6ec631a51c1339474e WHIRLPOOL a60b2381f8ef3ebde4d1cf272cf0c04ce1a0b3c0e7b3f8a7ae5fd61a9342817cbed5932f0a4c4c2bf8ebf401f87c9a73a7d5c9cddd5a4b21878b06e73db54576
+MISC ChangeLog 701 SHA256 8157cf0f260822d88c4660c93de1728b67c9c5e7f3df2a56cc971982ca33af4f SHA512 cfe2b300feba1c01ead914089ce0a48cb9235460dee5e9242376d146b480ffaf1f992524a267e53198dfa693c6939a417c9ab3e436b12f39e1f97665e5000353 WHIRLPOOL d7be561e8fb43999fdf5b59737548bd83552ed9cd683cb06c33b326fb931b3fbf79b47120c3f6f84c5f1f1d6836c2cf40b5e7cc8741fbeee0f679353b1c031b3
 MISC metadata.xml 746 SHA256 a8430d4c956fcf030ca0611d4fb4f0be2df1cd7f9feb028794506e482cf38dc0 SHA512 74592b9ddd5807bea84e26c975ad82a3c5948424b6f7fa3b30fa8358ca6786e3e1de0c2b3cbcd20123689e064236756931918f332bddd6d77658702ef2c6524a WHIRLPOOL d62bc29ff0c6d09d74638bcb8bbba79566902ee2ed7f2ead3f584a1e4275b9e632829c3f909e6ceec375c8100f38943180ebf529be4a095e50d8e3a90e4c014a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlIU6tQACgkQ1ycZbhPLE2CCRACgrhfTSlYBY89xpztkRGxm3XGH
-ciwAn07t+k27fZf4OBle8HW6kgTNU2vZ
-=zx1A
+iEYEAREIAAYFAlIU/RsACgkQ1ycZbhPLE2BL/wCfTYbZC3QyQb/Xw7j48N8QdHAs
+/G8An0N23M8NfHuHZ4ctCSflVi6DlcxZ
+=zfx3
 -----END PGP SIGNATURE-----
