@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
+DEPEND=app-arch/unzip >=virtual/jdk-1.6 >=dev-java/bcprov-1.45:0 dev-java/commons-compress:0 dev-db/db-je:3.3 dev-java/fec:0 dev-java/java-service-wrapper:0 dev-java/db4o-jdk11:0 dev-java/db4o-jdk12:0 dev-java/db4o-jdk5:0 dev-java/jbitcollider-core:0 dev-java/lzma:0 dev-java/lzmajio:0 dev-java/mersennetwister:0 test? ( dev-java/junit:0 dev-java/ant-junit:0 ) dev-java/ant-core:0 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2 >=dev-lang/python-2.4
+DESCRIPTION=An encrypted network without censorship
+EAPI=2
+HOMEPAGE=https://freenetproject.org/
+IUSE=test elibc_FreeBSD doc source elibc_FreeBSD
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2+ GPL-2 MIT BSD-2 Apache-2.0
+PDEPEND=net-libs/NativeThread:0
+RDEPEND=>=virtual/jre-1.6 net-libs/nativebiginteger:0 >=dev-java/bcprov-1.45:0 dev-java/commons-compress:0 dev-db/db-je:3.3 dev-java/fec:0 dev-java/java-service-wrapper:0 dev-java/db4o-jdk11:0 dev-java/db4o-jdk12:0 dev-java/db4o-jdk5:0 dev-java/jbitcollider-core:0 dev-java/lzma:0 dev-java/lzmajio:0 dev-java/mersennetwister:0 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip )
+SLOT=0
+SRC_URI=https://github.com/freenet/fred-official/archive/build01452.zip -> freenet-0.7.5_p1452.zip mirror://gentoo/seednodes-20130218.fref.bz2 mirror://gentoo/freenet-ant-1.7.1.jar
+_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-ant-2	65ba8d80c13cf56bad5ccec21a6b3c37	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=0b5e27198ce944bf46e07bf16bd9e1bc
