@@ -10,4 +10,4 @@ RDEPEND=dap? ( net-misc/curl ) hdf5? ( >=sci-libs/hdf5-1.8.6[zlib,szip,fortran?]
 SLOT=0
 SRC_URI=ftp://ftp.unidata.ucar.edu/pub/netcdf/netcdf-4.1.3.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	0954dce983a8c7cfe4e2b55263cb7a05	eutils	63afaaed8aa819fdcb814c7cd39495a2	fortran-2	db8710b355fc5598015c4bc3aad3bdb0	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=684c9d519a24366844c834f4d3903aab
+_md5_=0828c68eb2d04f394d28d59a40b649c7
