@@ -12,17 +12,19 @@ AUX freenet.old 452 SHA256 b3047b40128bbd7843dc370ab0aa150a9836ed789f48181bd6d8f
 AUX libraryloader-revert-using-of-absolute-path.patch 854 SHA256 b8bc840cc0c35a32bf000c23bdb5a7c7cb30508f6f39e3a3d29bb149996e6209 SHA512 24627e9f30a1b4456bf386ebc0a789e6c1d8670d4c1371b2d658cf04f9a04c09dc91ac803af0b8f883578cf9b3b351da69c7f882f7bdf3277f183134219b4889 WHIRLPOOL 6a328c040c81548bc77452639e2a0752304ef639480258b34d6d4ae15b0009d766a18df90f5685d4f2891a71188c19788675a65d8912560afb9a9fdfa0e9261e
 AUX run.sh-20090501 16217 SHA256 470aa99d083a16d2f620282502a59546611f1903e21aef50b93b10d9fada7d7a SHA512 ba97f1e370ffb7c9ea109b7d529430581a588d8d7e121ec09865e9e8932f2901477f7f43e7d0b95c7c95c2c42db05870e5d811528f91f78b48b68a539c804e67 WHIRLPOOL 201c2541da742ae0c211d6b736914340dd06d4907326de5a0073b39e8aa0a60933ed7d4eef3aa86465f9d0c2e0bf5bd78ed85d3c83c08ba9b50aabc25853864e
 DIST freenet-0.7.5_p1450.zip 4649231 SHA256 88f94020eff2e85a24dbd33ab930be0564de1f7dcb7b31c5bfb6b873636144c8 SHA512 c046c541476ac6ced8f2fc391402c044213ad573b0d4c31538b4594e46532f4c28991872d0a1805867468f5de2b6db2a0ce5f2f220396deebc4a3c6cba395ed6 WHIRLPOOL 70cc2669950bb952d488b6f73b7a8df14e31efb44f3262ca08e7f6e01a06de2e76cfc15eabb9beba9a84494dc2375809c5088963d99f43b4bcb5c493ff432e7d
+DIST freenet-0.7.5_p1452.zip 4668774 SHA256 ed2bd48f94a32cd91d313ee3b3ea0889ca83baeac7116a39e63c9c624c65ad7f SHA512 67bf9b4982f4ab709800c9c969f7fa44cd2a3ef9c22246f2811d87efddc1e23c8454d2666a993b3e73bfa43955328bb68bb41d8ecab45131ea71027d12804cc1 WHIRLPOOL 1e392181ec0b8ac42ec9d63cd6816b382f662efd9712acaf5a8fdb727c6ab1e40ae6926b33b3601693870d89e2cb9bf66a2c2ccce25a699d4c21b7d1d341b2b7
 DIST freenet-ant-1.7.1.jar 1327167 SHA256 634e0b616d65d611419920e8b379b7b66399e44f520baa772147ed73743433b1 SHA512 2c84378d995fed0630169fffab020bde89c3edb7b3bc1e14e2251ed71be684dc2520fdeed8bae382de362984e25a31dcd59326ef8735f8066166c1e8d98ca408 WHIRLPOOL 667be2b1581c5fd847907b63522a0f83c595a6b8f1805d714e978a5cb0f05de4804153c89605618adf5c3b097a7019e7d7e9de0bf0987c7b1adb0dbc54e0f055
 DIST seednodes-20130218.fref.bz2 9194 SHA256 9ac006dc994456ef34f81b070a3dba6574f209fc2ea3413f57f66f0b5dde77a2 SHA512 42539e0471b44be83bcb2cc473217482099f7800d97fd642401607d6d99da4f0ea25c8dc974025d34665607a7f787a37137e4d839b047bca2f1f4d42b8363fe2 WHIRLPOOL 9a4ebbf703f9da7e427fd95ac6b4afbe6f4dd632b09362fbe7504d8606e8b9be768e39cfae82e211bd656e0748b5006e96ab4f4ceb3b9fcf60782a0f062fb8c2
 EBUILD freenet-0.7.5_p1450.ebuild 4323 SHA256 53de99364dcadf9a0a1a9b80d6c30914e5e9a62dd74167e4601b0697ace1a645 SHA512 ff76580db3930457052aa0cee183cae918411a333c6962fd309d4c17583a996fed502941db91a9da2139897e8a6645c7cecc9d4127a872df813e236c4ae7fd32 WHIRLPOOL f045e4b1a34acc7e052c91eabaa3dd903d0ad860770e6f0bc33230087da17a7304d7a828f6853d1791f7d760b1d25607d772be99ff5688c2fc22f03d25addbc7
-MISC ChangeLog 23952 SHA256 7667a0595443f95940317efcde7db054a34e9ea02cba047c53f0452cca5b8674 SHA512 223669b1231abb86fc4202d72583253fe853a89e791823bae0d05e7e0cff929ecb94bf0f84f70935c889b830fe6e2ac3b4af31c42ab3c9f03d1c9e49431d1d20 WHIRLPOOL b6fd7ce155c6997cb090dfe326172c86bd4aaf30d179319149a42d3a4530c44374374a3e2132b7879da2ab1abd0c647d58fd19a07cadcc8a8232375d00705fe9
+EBUILD freenet-0.7.5_p1452.ebuild 4323 SHA256 27c90831484497e7c64b07139a4af344b5592b412d58536de83514d30a984b3e SHA512 29ecada124cffbb0c3dcbff61ddb59ae4c5830f469a055ac88f8f72a36097e6cbf39276264af1b68deea4dfb1fa03cbc8c43b95471e3a1d1f4e7dd4758f18251 WHIRLPOOL 8887876c804152bb94ec99172d5d59aef9750522ceea07ba53455eeb3d0e8076a9689c29f07b9c8adde561667db7af12e6e7faf3c306e80f8c56eab2a35143ac
+MISC ChangeLog 24094 SHA256 6f3d9a3e3983bb5fe72de980bb835e2a013565c6dc0eeac69cf76fe4f0bc4874 SHA512 807fc53d421c433422a0cc02a306a69e5aa00353a697a9669c1cbadde9ae4969e64f5707fd390fda9d637842caac42a7088d24a7b5355afe13d48d7aaeaa5176 WHIRLPOOL 7924e176b17e86af8bb5a077ddaf4653d05c72ab093335d8fb7c6803eb929e296dff62b81905bf20cd21f3b3072168bf4c64f6fb6465da2667024f8b7f0140c8
 MISC metadata.xml 243 SHA256 76e8c4cafe92af4eb083e9682c375a2f887458dac6ce8f2982976a96abcf8219 SHA512 92bf36a1bad3877a5a981271afa7381a38f3cc87267233205af5aa0ad53c455d851bb1d9ff60fe02eda49a3347c497c5bfeaa4c160542abd62d81a0450c4b77f WHIRLPOOL 18fde625e32450606e852e52f034c73d6514284aa19842867313432d1ab1cc1d40ceae766c0c61b927a7b5c3917a6624c8e875583f49c0d5951797cf66e8ff95
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAlH8uSMACgkQG7kqcTWJkGeHmgP9GdMYeBAsu0ALxGTeBLbd9vOd
-gnpUgsaBC9DJuqOzl+mX1pXX+X4p4xTXo3kBoSD/PD240WfupLInHk5Fg5hGhDCG
-gVtyGYvTSdba47k6FDtCygUMaKhe3P7p/yqrI/EANpAHa03ck+D298i7veOnRCgQ
-0QC1BBRlo5At459O3N0=
-=H9Df
+iJwEAQEIAAYFAlIU+YUACgkQG7kqcTWJkGebPgP+K+niDaxFeAUong37ekhJQurH
+N/MAlJzIknwjCN5EZjZh/42GXeiv/3U5IdsRwDVTY+Tymlm+e7ss1FIjr1QhVX4E
+LCnePkljI3QgVdoJXhPbaLsEulYp+K+CkshXbEo/V3EvYbwSUt5aU1ziBgm36cAX
+3Rwk4Nm9ZFntWpC1jPs=
+=hR64
 -----END PGP SIGNATURE-----
