@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/netcdf
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/netcdf/ChangeLog,v 1.109 2013/07/05 16:33:34 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/netcdf/ChangeLog,v 1.110 2013/08/21 17:51:56 ottxor Exp $
+
+  21 Aug 2013; Christoph Junghans <ottxor@gentoo.org> netcdf-4.1.3.ebuild:
+  fixed linking issue (bug #433647)
 
 *netcdf-4.3.0 (05 Jul 2013)
 
